--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,19 +30,25 @@ environment:
 dependencies:
   animate_do: ^4.2.0
   cupertino_icons: ^1.0.8
+  device_info_plus: ^11.4.0
+  dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^5.2.1
   formz: ^0.8.0
+  get_it: ^8.0.3
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  injectable: ^2.5.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
