--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   injectable: ^2.5.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   build_runner: ^2.4.15
