--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^8.0.3
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   injectable: ^2.5.0
   shared_preferences: ^2.5.3
 
