--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   injectable: ^2.5.0
+  path: ^1.9.1
   shared_preferences: ^2.5.3
 
 dev_dependencies:
